# 24944_parallel_programming

1/: CMakeLists.txt  README.md  sinsum  sinsum.cpp
2/: visual.ipynb
2/task_2_1/: mxv.c  report.tex
2/task_2_2/: integrate.c
